# stm32_daq

./: .gitignore  .gitmodules  CMakeLists.txt  F303.elf  README.md  STM32Toolchain.txt  commitAndPush.sh  main.c  main.h  make_F303.sh  make_L053.sh
buildF303/: CMakeCache.txt  Makefile  cmake_install.cmake
